Closed
Bug 180267
Opened 23 years ago
Closed 23 years ago
A crash occurs while quitting the application when the Get Info dialog is opened
Categories
(Camino Graveyard :: Bookmarks, defect)
Tracking
(Not tracked)
VERIFIED
FIXED
People
(Reporter: chrispetersen, Assigned: sfraser_bugs)
Details
(Keywords: crash, regression)
Attachments
(1 file)
|
3.60 KB,
text/plain
|
Details |
build: 2002-11-14-04
platform: 10.2.2
Expected results: No crash should occur
What I got: Application crashes during quit process
Steps to reproduce:
1) Open sidebar and select a folder or tabbed bookmark.
2) Choose Get Info from Edit menu.
3) Quit Chimera while Get Info dialog is opened.
4) Application crashes while quitting.
Talkback: TB333937
| Reporter | ||
Comment 1•23 years ago
|
||
Comment 2•23 years ago
|
||
hey chris, this smells like a regression --if you have time, could you narrow
down when this might've regressed? (i'm not in front of a mac at the moment.)
Keywords: crash,
regression
| Assignee | ||
Comment 3•23 years ago
|
||
Fixed checked in: make sure the window is closed before quitting.
Status: NEW → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
| Reporter | ||
Comment 4•23 years ago
|
||
Verified in the 2002-11-16-04 NB under 10.2.2.
Status: RESOLVED → VERIFIED
You need to log in
before you can comment on or make changes to this bug.
Description
•