Fix bug 180267: crash when quitting with bookmark info window showing, for tab group or folder.